# wwn-containers

./: .gitignore  COMPLIANCE.md  README.md  capabilities.nix  flake.nix
dependencies/containers/: oci-core.nix  stub.nix
dependencies/containers/android/: proot-runner.nix
dependencies/containers/cli/: container-cli.nix
dependencies/containers/container-in-vm/: guest-module.nix
dependencies/containers/macos/: Package.swift  containerd-bridge.nix
dependencies/containers/macos/Sources/wwn-containerd/: main.swift
dependencies/containers/oci-core/: Cargo.toml
dependencies/containers/oci-core/src/: catalog.rs  digest.rs  error.rs  lib.rs  main.rs  reference.rs  registry.rs  spec.rs  store.rs  unpack.rs
dependencies/containers/registry/: container-cli.nix  oci-image.nix  oci-runtime-android.nix  oci-runtime-image-only.nix  oci-runtime-macos.nix  oci-runtime-mobile.nix
