[package]
name = "wwn-oci"
version = "0.1.0"
edition = "2021"
publish = false
description = "Universal OCI image management for Wawona: registry v2 pull, content-addressable store, manifest parse, rootfs unpack. Pure userspace, cross-platform (no exec)."

[lib]
name = "wwn_oci"
path = "src/lib.rs"

[[bin]]
name = "wwn-oci"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
ureq = { version = "2", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
